# mcp-server-fetch-python

./: README.md  pyproject.toml
src/mcp_server_fetch_python/: __init__.py  server.py  settings.py
tests/mcp_server_fetch_python/: test_server.py  test_settings.py
