[project]
name = "mcp-server-fetch-python"
version = "0.1.1"
description = "This is an MCP server that provides comprehensive tools for extracting and transforming web content into various formats, including support for JavaScript-rendered content and media files"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
 "httpx>=0.28.1",
 "markitdown>=0.1.1",
 "mcp>=1.2.0",
 "openai>=1.59.8",
 "playwright>=1.49.1",
 "pydantic-settings>=2.7.1",
]
[[project.authors]]
name = "tatn"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=24.10.0",
    "build>=1.2.2.post1",
    "hatch>=1.14.0",
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.2",
    "twine>=6.0.1",
]

[project.urls]
Homepage = "https://github.com/tatn/mcp-server-fetch-python"
Repository = "https://github.com/tatn/mcp-server-fetch-python"


[project.scripts]
mcp-server-fetch-python = "mcp_server_fetch_python:main"

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_fetch_python"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
lint.select = ["E", "F", "I", "N"]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
